--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,12 +10,11 @@
 </head>
 
 <body>
-  <h4 class="container mt-4"><strong>글 작성 </strong></h4>
+  <h4 class="container mt-4"><strong>관리자 로그인 </strong></h4>
 
 
 
   <div class="container mt-3">
-    <a href="list">로그인</a>
     <form action="/login" method="POST">
       <div class="form-group">
         <label>아이디</label>
@@ -24,7 +23,7 @@
       </div>
       <div class="form-group">
         <label>비밀번호</label>
-        <input type="password" class="form-control" name="password">
+        <input type="password" class="form-control" name="pw">
       </div>
       <button type="submit" class="btn btn-outline-secondary">로그인하기</button>
     </form>
