--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-  <h4 class="container mt-4"><strong>마이페이지</strong></h4>
+  <h4 class="container mt-4"><strong>마이페이지 123</strong></h4>
 
+
+sdf
 
 
 
