--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -10,10 +10,7 @@
 </head>
 
 <body>
-  <h4 class="container mt-4"><strong>마이페이지 123</strong></h4>
-
-
-sdf
+  <h4 class="container mt-4"><strong>마이페이지 </strong></h4>
 
 
 
