마이페이지 수정

--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -11,7 +11,15 @@
 
 <body>
   <h4 class="container mt-4"><strong>마이페이지 </strong></h4>
+  <div>
+    id :
+    <%= user.id %>
 
+  </div>
+  <div>
+    pw :
+    <%= user.password %>
+  </div>
 
 
 
