--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,6 +30,22 @@
   </div>
 
 
+<div class="container mt-4">
+  회원가입
+  <form action="/register " method="post">
+    <div class="form-group">
+      <label for="">아이디</label>
+      <input type="text" class="form-control" name="id">
+    </div>
+    <div class="form-group">
+      <label for="">비번</label>
+      <input type="text" class="form-control" name="pw">
+    </div>
+      <button type="submit" class="btn btn-danger">회원가입</button>
+  </form>
+</div>
+
+
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script>
