--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
 
 
   <div class="container mt-4">
-    회원가입
+    회원가입 test
     <form action="/register " method="post">
       <div class="form-group">
         <label for="">아이디</label>
