--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h4 class="container mt-4"><strong>관리자 로그인 </strong></h4>
+  <h4 class="container mt-4"><strong>관리자 로그인 test</strong></h4>
 
 
 
