라이브러리 추가

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -21,7 +21,9 @@
 
     <!-- 서버로 폼 전송방식 -->
     <form action="/upload" method="POST" enctype="multipart/form-data">
-      <input type="file" >
+      <input type="file" name="profile">
+
+      <button type="submit">전송</button>
 
     </form>
 
