--- a/views/list.ejs
+++ b/views/list.ejs
@@ -40,6 +40,8 @@
         <a class="btn btn-primary" href="http://localhost:8080/detail/<%= posts[i]._id %>">페이지 이동</a>
 
         <a class="btn btn-dark" href="http://localhost:8080/edit/<%= posts[i]._id %>">페이지 수정</a>
+
+        <button class="btn btn-secondary chat" data-id=" <%= posts[i].writeId %>">채팅하기</button>
       </li>
       <% } %>
 
@@ -82,6 +84,22 @@
       let getKeyword = $('#keyword').val();
       window.location.replace('/search?value=' + getKeyword)
     });
+
+
+    $('.chat').click(function(e){
+      var id = e.target.dataset.id
+
+      console.log('id',id);
+      $.post('/chatroom',{userId : id
+
+
+      }).then(()=>{
+        console.log('성공함');
+
+      })
+
+
+    })
 
 
 
