--- a/views/list.ejs
+++ b/views/list.ejs
@@ -88,20 +88,10 @@
 
     $('.chat').click(function(e){
       var id = e.target.dataset.id
-
-      console.log('id',id);
-      $.post('/chatroom',{userId : id
-
-
-      }).then(()=>{
+      $.post('/chatroom',{ userId : id }).then(()=>{
         console.log('성공함');
-
       })
-
-
     })
-
-
 
   </script>
 
