--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,87 +1,53 @@
 <!doctype html>
-
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="/public/main.css">
-  <style>
-    .chat-content {
-  height: 450px;
-  overflow-y: scroll;
-  padding: 10px;
-}
-.chat-content li {
-  margin-top: 10px;
-  list-style: none;
-}
-.text-small {
-  font-size: 12px;
-  color: gray;
-  margin-bottom: 0;
-}
-.chat-box {
-  background: #eee;
-  padding: 5px;
-  border-radius: 5px;
-  float: left;
-}
-.mine {
-  float: right;
-}
-  </style>
   <title>Hworld!</title>
 </head>
-
 <body>
-
-  <div class="container p-4 detail">
-
-    <div class="row">
-      <div class="col-3">
-        <ul class="list-group chat-list">
-          <li class="list-group-item" data-id="">
-            <h6>채팅방1</h6>
-            <h6 class="text-small">채팅방설명</h6>
-          </li>
-          <li class="list-group-item">
-             <h6>채팅방2</h6>
-             <h6 class="text-small">채팅방설명</h6>
-           </li>
-         </ul>
-       </div>
-
-       <div class="col-9 p-0">
-         <div class="chat-room">
-            <ul class="list-group chat-content">
-              <li><span class="chat-box">채팅방1 내용</span></li>
-              <li><span class="chat-box">채팅방1 내용</span></li>
-              <li><span class="chat-box mine">채팅방1 내용</span></li>
-            </ul>
-          <div class="input-group">
-            <input class="form-control" id="chat-input">
-            <button class="btn btn-secondary" id="send">전송</button>
-          </div>
+<div class="container mt-4 text-center">
+  <div class="mb-4">
+      <input type="text" placeholder="검색" id="keyword">
+      <button id="search">검색</button>
+  </div>
+    <ul class="list-group">
+      <% for(var i = 0 ; i< data.length ; i ++){ %>
+      <li class=" list-group-item">
+        <div>
+          채팅방 제목 :  <%= data[i].title %>
         </div>
-      </div>
-    </div>
-
+        <div>
+          채팅방 정보 : <%= data[i].member %>
+        </div>
+        <div>
+        </div>
+        <button class="btn btn-secondary" id="send">전송하기</button>
+      </li>
+      <% } %>
+    </ul>
   </div>
 
-<script>
-
-
-
-
-</script>
-
   <script src="https://code.jquery.com/jquery-3.4.1.min.js">
+
   </script>
 
+  <script>
+
+/* 전송버튼 클릭하면
+디비 저장 게시물 정보 저장되어야
+유저 콘텐츠 아이디 게시물
+
+var 보낼거
+
+*/
+
+
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
   </script>
@@ -89,5 +55,4 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
 </body>
-
 </html>
