--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -9,29 +9,24 @@
 </head>
 <body>
 
-  <nav class=" navbar-expand-lg bg-light">
-    <div class="-fluid">
-      <a class="navbar-brand" href="/">Logo</a>
-      <a class=" active" aria-current="page" href="/write">Write</a>
-      <a class="" href="/list">List</a>
-    </div>
-  </nav>
+<nav class=" navbar-expand-lg bg-light">
+  <div class="-fluid">
+    <a class="navbar-brand" href="/">Logo</a>
+    <a class=" active" aria-current="page" href="/write">Write</a>
+    <a class="" href="/list">List</a>
+  </div>
+</nav>
 
-  <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
+
+  <h4 class="container mt-4"><strong>List</strong></h4>
 
   <div class="container mt-3">
-    <form action="/add" method="POST">
-      <div class="form-group">
-        <label>오늘의 할일</label>
-        <input type="text" class="form-control" name="title">
+    <% for (var i = 0; i < posts.length; i ++) { %>
+      <h4>제목 : <%= posts[i].title %></h4>
+      <p>내용 : <%= posts[i].date %></p>
+    <% } %>
+
       </div>
-      <div class="form-group">
-        <label>날짜</label>
-        <input type="text" class="form-control" name="date">
-      </div>
-      <button type="submit" class="btn btn-outline-secondary">Submit</button>
-    </form>
-  </div>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
