--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -24,13 +24,28 @@
     <% for (var i = 0; i < posts.length; i ++) { %>
       <h4>제목 : <%= posts[i].title %></h4>
       <p>내용 : <%= posts[i].date %></p>
+      <button>삭제</button>
       <p>----------------------------</p>
       <% } %>
 
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
+    <script>
+      $.ajax({
+        method : "POST",
+        url : '/add',
+        data : "미미"
+      }).done(function(result){
+
+      }).fail(function(error){
+
+      })
+    </script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
