--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -8,7 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-
   <nav class=" navbar-expand-lg bg-light">
     <div class="-fluid">
       <a class="navbar-brand" href="/">Logo</a>
@@ -16,10 +15,7 @@
       <a class="" href="/list">List</a>
     </div>
   </nav>
-
-
   <h4 class="container mt-4"><strong>List</strong></h4>
-
   <div class="container mt-3">
     <% for (var i = 0; i < posts.length; i ++) { %>
       <h4>제목 : <%= posts[i].title %></h4>
@@ -27,30 +23,22 @@
       <button class="delete" data-id="<%= posts[i]._id %>" >삭제</button>
       <p>----------------------------</p>
       <% } %>
-
     </div>
-
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-
     <script>
-
       $('.delete').click(function(e){
         $.ajax({
-        method : "POST",
-        url : '/add',
-        data : {_id:e.target.dataset.id}
-      }).done(function(result){
+          method : "DELETE",
+          url : '/delete',
+          data : {_id:e.target.dataset.id}
+        }).done(function(result){
 
-      }).fail(function(error){
+        }).fail(function(error){
 
+        })
       })
-
-      })
-
-
     </script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
