--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -31,21 +31,28 @@
     </ul>
 
     </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <script>
       $('.delete').click(function(e){
+
         $.ajax({
           method : "DELETE",
           url : '/delete',
           data : {id:e.target.dataset.id}
-        }).done(function(result){
-
+        }).done((result)=>{
+          $(this).addClass('tes')
+          /*
+          현재 버튼의 부모 li를 감춤
+          */
+          $(this).parent('li').fadeOut();
         }).fail(function(xhr,code,err){
 
         })
       })
     </script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
