--- a/app/views/detail.ejs
+++ b/app/views/detail.ejs
@@ -8,17 +8,18 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class=" navbar-expand-lg bg-light">
-    <div class="-fluid">
-      <a class="navbar-brand" href="/">Logo</a>
-      <a class=" active" aria-current="page" href="/write">Write</a>
-      <a class="" href="/list">List</a>
-    </div>
-  </nav>
+  <%- include('nav.html') %>
+
   <h4 class="container mt-4"><strong>상세페이지</strong></h4>
   <div class="container mt-3">
-    <h4>제목 : <%= data.title %></h4>
-    <h4>제목 : <%= data.date %></h4>
+    <div class="card" style="width: 100%">
+      <div class="card-body">
+        <h5 class="card-title"><%= data.title %></h5>
+        <h6 class="card-subtitle mb-2 text-muted"><%= data.date %></h6>
+        <p class="card-text">임시내용입니다.</p>
+        <a href="#" class="card-link">수정하기</a>
+      </div>
+    </div>
 
     </div>
 
