--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -8,13 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class=" navbar-expand-lg bg-light">
-    <div class="-fluid">
-      <a class="navbar-brand" href="/">Logo</a>
-      <a class=" active" aria-current="page" href="/write">Write</a>
-      <a class="" href="/list">List</a>
-    </div>
-  </nav>
+  <%- include('nav.html') %>
+
   <h4 class="container mt-4"><strong>List</strong></h4>
   <div class="container mt-3">
 
