--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -8,30 +8,9 @@
   <title>Document</title>
 </head>
 <body>
+  <%- include('nav.html') %>
 
-  <nav class=" navbar-expand-lg bg-light">
-    <div class="-fluid">
-      <a class="navbar-brand" href="/">Logo</a>
-      <a class=" active" aria-current="page" href="/write">Write</a>
-      <a class="" href="/list">List</a>
-    </div>
-  </nav>
-
-  <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
-
-  <div class="container mt-3">
-    <form action="/add" method="POST">
-      <div class="form-group">
-        <label>오늘의 할일</label>
-        <input type="text" class="form-control" name="title">
-      </div>
-      <div class="form-group">
-        <label>날짜</label>
-        <input type="text" class="form-control" name="date">
-      </div>
-      <button type="submit" class="btn btn-outline-secondary">Submit</button>
-    </form>
-  </div>
+  <h4 class="container mt-4"><strong>메인</strong></h4>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
