--- a/app/views/write.ejs
+++ b/app/views/write.ejs
@@ -8,14 +8,8 @@
   <title>Document</title>
 </head>
 <body>
+  <%- include('nav.html') %>
 
-  <nav class=" navbar-expand-lg bg-light">
-    <div class="-fluid">
-      <a class="navbar-brand" href="/">Logo</a>
-      <a class=" active" aria-current="page" href="/write">Write</a>
-      <a class="" href="/list">List</a>
-    </div>
-  </nav>
 
   <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
