--- a/app/views/edit.ejs
+++ b/app/views/edit.ejs
@@ -14,16 +14,19 @@
   <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
   <div class="container mt-3">
-    <form action="/add" method="POST">
+    <form action="/edit?_method=PUT" method="POST">
+      <input value="<%= posts.id %>" name="id" >
       <div class="form-group">
         <label>오늘의 할일</label>
-        <input type="text" class="form-control" name="title">
+        <input type="text" class="form-control" name="title" value="<%= posts.title %>">
       </div>
       <div class="form-group">
         <label>날짜</label>
-        <input type="text" class="form-control" name="date">
+        <input type="text" class="form-control" name="date"
+        value="<%= posts.date %>"
+        >
       </div>
-      <button type="submit" class="btn btn-outline-secondary">Submit</button>
+      <button type="submit" class="btn btn-outline-secondary">수정하기</button>
     </form>
   </div>
 
