마이페이지 추가

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -1,8 +1,12 @@
 <nav class=" navbar-expand-lg bg-light">
   <div class="-fluid">
     <a class="navbar-brand" href="/">Logo</a>
-    <a class=" active" aria-current="page" href="/write">Write</a>
-    <a class="" href="/list">List</a>
-
+    <a class=" active" aria-current="page" href="/write">글쓰기</a>
+    <span>|</span>
+    <a class="" href="/list">리스트</a>
+    <span>|</span>
+    <a class="" href="/mypage">마이페이지</a>
+    <span>|</span>
+    <a class="" href="/login">로그인</a>
   </div>
 </nav>
