--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -17,11 +17,11 @@
     <form action="/login" method="POST">
       <div class="form-group">
         <label>아이디</label>
-        <input type="text" class="form-control" name="id">
+        <input type="text" class="form-control" name="id" value="test">
       </div>
       <div class="form-group">
         <label>비번</label>
-        <input type="text" class="form-control" name="pw">
+        <input type="text" class="form-control" name="pw" value="123">
       </div>
       <button type="submit" class="btn btn-danger">로그인</button>
     </form>
