--- a/app/views/mypage.ejs
+++ b/app/views/mypage.ejs
@@ -14,7 +14,7 @@
   <h4 class="container mt-4"><strong>마이페이지</strong></h4>
 
   <div class="container mt-3">
-
+    <%= user.id  %> 님의 페이지
 
   </div>
 
