--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -7,6 +7,9 @@
     <span>|</span>
     <a class="" href="/mypage">마이페이지</a>
     <span>|</span>
+    <a class="" href="/search">검색</a>
+    <span>|</span>
     <a class="" href="/login">로그인</a>
+
   </div>
 </nav>
