--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -10,6 +10,9 @@
     <a class="" href="/search">검색</a>
     <span>|</span>
     <a class="" href="/login">로그인</a>
+    <span>|</span>
+    <a class="" href="/register">회원가입</a>
+
 
   </div>
 </nav>
