이미지 업로드 추가

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -9,6 +9,8 @@
     <span>|</span>
     <a class="" href="/search">검색</a>
     <span>|</span>
+    <a class="" href="/upload">이미지 업로드</a>
+    <span>|</span>
     <a class="" href="/login">로그인</a>
     <span>|</span>
     <a class="" href="/register">회원가입</a>
