--- a/app/views/upload.ejs
+++ b/app/views/upload.ejs
@@ -16,7 +16,7 @@
   <div class="container mt-3">
 
   <form action="/upload" method="POST"  enctype="multipart/form-data">
-    <input type="file" name="prifle">
+    <input type="file" name="profile">
     <button type="submit">전송</button>
   </form>
 
