--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -17,9 +17,11 @@
 
   <% for (var i = 0; i < posts.length; i ++) { %>
     <li class="list-group-item">
+      <a href="/edit/<%= posts[i].id %>">
       <h4>제목 : <%= posts[i].title %></h4>
       <p>내용 : <%= posts[i].date %></p>
       <button class="delete" data-id="<%= posts[i].id %>" >삭제</button>
+    </a>
     </li>
     <% } %>
 
