--- a/app/views/search.ejs
+++ b/app/views/search.ejs
@@ -13,6 +13,25 @@
   <div class="container input-group mb-2 mt-4">
     <input class="form-control">
     <button class="input-group-append btn btn-danger" id="search">검색</button>
+
+
+    <div style="width:100%;" class="mt-4">
+    <h3>검색결과 테스트</h3>
+    <ul class="list-group">
+      <% if  (posts) { %>
+        <% for (var i = 0; i < posts.length; i ++) { %>
+          <li class="list-group-item">
+            <a href="/edit/<%= posts[i].id %>">
+              <h4>제목 : <%= posts[i].title %></h4>
+              <p>날짜 : <%= posts[i].date %></p>
+            </a>
+          </li>
+          <% } %>
+          <% } %>
+        </ul>
+
+
+      </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
