--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -6,6 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <title>Document</title>
+  <style>
+    .chat-content {
+      height: 450px;
+      overflow-y: scroll;
+      padding: 10px;
+    }
+    .chat-content li {
+      margin-top: 10px;
+      list-style: none;
+    }
+    .text-small {
+      font-size: 12px;
+      color: gray;
+      margin-bottom: 0;
+    }
+    .chat-box {
+      background: #eee;
+      padding: 5px;
+      border-radius: 5px;
+      float: left;
+    }
+    .mine {
+      float: right;
+    }
+  </style>
 </head>
 <body>
   <%- include('nav.html') %>
