--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -22,6 +22,7 @@
           </a>
           <div style="clear: both;">
             <button class="delete" data-id="<%= posts[i].id %>" >삭제</button>
+            <button class="btn btn-secondary chat" data-id="<%= posts[i].member %>" data-title="<%= posts[i].title %>">채팅하기</button>
           </div>
         </li>
         <% } %>
@@ -31,9 +32,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <script>
-
       $('.delete').click(function(e){
-
         $.ajax({
           method : "DELETE",
           url : '/delete',
@@ -45,9 +44,20 @@
           */
           $(this).parents('li').fadeOut();
         }).fail(function(xhr,code,err){
-
         })
       })
+
+      $('.chat').click(function(e){
+        var _id= e.target.dataset.id
+        var _title= e.target.dataset.title
+
+        $.post('/chatroom',{youId : _id,title : _title}).then(()=>{
+          console.log('게시물 완룐')
+        })
+      })
+
+
+
     </script>
 
 
