--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -16,5 +16,12 @@
     <a class="" href="/register">회원가입</a>
 
 
+    <div style="float: right;margin-top: 8px;margin-right: 10px;">
+      <a class="" href="/chat">채팅하기</a>
+    </div>
+
+
+
+
   </div>
 </nav>
