--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -22,7 +22,7 @@
           </a>
           <div style="clear: both;">
             <button class="delete" data-id="<%= posts[i].id %>" >삭제</button>
-            <button class="btn btn-secondary chat" data-id="<%= posts[i].member %>" data-title="<%= posts[i].title %>">채팅하기</button>
+            <button class="btn btn-secondary chat" data-id="<%= posts[i]._id %>"  data-title="<%= posts[i].title %>">채팅하기</button>
           </div>
         </li>
         <% } %>
@@ -50,7 +50,6 @@
       $('.chat').click(function(e){
         var _id= e.target.dataset.id
         var _title= e.target.dataset.title
-
         $.post('/chatroom',{youId : _id,title : _title}).then(()=>{
           console.log('게시물 완룐')
         })
