채팅내용 추가

--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -83,6 +83,30 @@
       }).fail(function(xhr,code,err){
       })
     })
+
+    $('#send').click(function(){
+      let chatText= $("#chat-input").val()
+
+        var send = {
+        parent : clickID,
+        content : chatText
+      }
+
+     if (!clickID) {
+      alert('채팅방 목록을 클릭하세요')
+      return
+     }
+      $.post('/message',send).then((a)=>{
+        console.log(a);
+      })
+
+    })
+
+    let clickID
+    $('.list-group-item').click(function (){
+      $(this).css('background-color', '#eee');
+      clickID = $(this).attr('data-id');
+    });
   </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
