--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -56,6 +56,8 @@
               <li><span class="chat-box">채팅방1 내용</span></li>
               <li><span class="chat-box">채팅방1 내용</span></li>
               <li><span class="chat-box mine">채팅방1 내용</span></li>
+
+
             </ul>
             <div class="input-group">
               <input class="form-control" id="chat-input">
@@ -106,6 +108,12 @@
     $('.list-group-item').click(function (){
       $(this).css('background-color', '#eee');
       clickID = $(this).attr('data-id');
+
+      eventSource = new EventSource('/message/' + clickID);
+  eventSource.addEventListener('test', function (e){
+    console.log(e.data);
+  });
+
     });
   </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
